# pantheon

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SPEC_KIT_COMPATIBILITY.md  VERIFICATION.md  benchmark-feedback.md  dev.md  pyproject.toml  tasks.md
.claude/: settings.json
.claude/agents/: dev-implementer.md  qa-validator.md
.claude/commands/pantheon/: contextualize.md
.github/workflows/: integration-tests.yml.example
.specify/memory/: constitution.md
docs/: ARCHITECTURE.md  design.md  research.md  testing.md
docs/archive/: implement-dev-integration-analysis.md  implement-dev-integration-command-proposal.md  implement-dev-integration-command-questions.md  implement-dev-integration-proposal.md  implement-dev-integration-research.md
docs/archive/benchmarks/test-1/: evaluation-report.md  spec.md  workflow-improvement-comments.md  workflow-improvements-proposal.md  workflow-improvements.md
docs/archive/features/v0.2-feature-spec/: data-model.md  plan.md  research.md  tasks.md
docs/proposals/: option-1-pure-claude-md.md  option-2-wrapper-commands.md  option-3-two-phase-install.md
examples/: spec-kit-integration.md
scripts/: README.md  test_spec_kit_integration.sh
specs/001-build-out-a/: quickstart.md  spec.md  tasks.md
specs/001-build-out-a/contracts/: hook-installation-api.md  quality-config-api.md  quality-discovery-api.md
src/pantheon/: __init__.py  cli.py
src/pantheon/agents/: __init__.py  dev-v1.md  dev.md  install.py  qa.md
src/pantheon/commands/: __init__.py  contextualize.md  install.py
src/pantheon/hooks/: __init__.py  install.py  orchestrator-code-gate.sh  phase-gate.sh  phase-transition-gate.sh  pre-commit-gate.sh  quality-gate.sh  subagent-validation.sh
src/pantheon/integrations/: __init__.py  hooks.py  spec_kit.py
src/pantheon/integrations/claude/: __init__.py  hooks.py
src/pantheon/integrations/spec_kit/: __init__.py  backup.py  detection.py  integration.py  types.py  validation.py
src/pantheon/integrations/spec_kit/directives/: __init__.py  claude_md.py  implement.py  plan.py  tasks.py
src/pantheon/integrations/spec_kit/directives/content/: claude_md.md  implement.md  plan.md  tasks.md
src/pantheon/quality/: config.py  discovery.py
tests/: __init__.py  conftest.py  test_integration.py  test_spec_kit.py
tests/contract/: test_hook_installation.py  test_quality_config.py  test_quality_discovery.py
tests/integration/: test_cli_init.py  test_hook_installation_e2e.py  test_qa_workflow_e2e.py  test_quality_discovery_e2e.py
tests/manual/: test-contextualize-command.md
